refactoring after code analysis